--- a/prepros.cfg
+++ b/prepros.cfg
@@ -23,6 +23,17 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "0ffc35d4": {
+          "id": "0ffc35d4",
+          "path": "index.html",
+          "output": "index.html",
+          "name": "index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
